src/objects/thresholds__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to set numerical limits</description>
    <fields>
        <fullName>Adjustment_Factor__c</fullName>
        <description>Use to set the amount the limit is to be adjusted</description>
        <inlineHelpText>Set the Adjustment Factor</inlineHelpText>
        <label>Adjustment Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Limit__c</fullName>
        <description>Used to set a max limit</description>
        <inlineHelpText>Set the maximum limit threshold</inlineHelpText>
        <label>High Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low_Limit_Default_Value__c</fullName>
        <description>This is the default value used when resetting the Low_Limit__c</description>
        <label>Low Limit Default Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low_Limit__c</fullName>
        <description>Used to store the lower limit threshold</description>
        <inlineHelpText>Set the lower limit for action</inlineHelpText>
        <label>Low Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Thresholds</label>
</CustomObject>